--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^6.1.6",
     "animate-on-scroll-framer": "^1.3.0",
     "react": "^18.3.1",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-elegant-timeline": "^1.0.9",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
