--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "animate-on-scroll-framer": "^1.3.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
