--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-elegant-timeline": "^1.0.9",
     "react-icons": "^5.3.0",
+    "react-load-animations-plus": "^2.1.6",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
