--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-elegant-timeline": "^1.0.9",
     "react-icons": "^5.3.0",
     "react-load-animations-plus": "^2.1.6",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
