--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.3.0",
     "react-load-animations-plus": "^2.1.6",
     "react-router-dom": "^6.28.0",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "react-timeline-responsive": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
